# xps

./: Cargo.toml
src/: error.rs  main.rs  server.rs
src/auth/: middleware.rs  mod.rs
src/models/: user.rs
src/repository/: surrealdb_repo.rs
src/users/: blinks.rs  mod.rs  register.rs
