[package]
name = "xps"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.29", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
argon2 = "0.5"
thiserror = "1.0.61"
sha2 = "0.10"
dotenvy = "0.15"
jsonwebtoken = "9"