[package]
name = "xps"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.29", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
thiserror = "1.0.61"
sha2 = "0.10"
dotenvy = "0.15"
jsonwebtoken = "9"
futures = "0.3"
actix-service = "2"
surrealdb = "1.5.4"
uuid = "1.10.0"